# xunfei_test

./: .gitignore  README.md
task1/: README.md  task1.py
task2/: README.md  task2.cpp
task3/: README.md  decrypted.py  encrypted.py
task4/: README.md  main.cpp
task5/sub_task1/: CMakeLists.txt  README.md  Vector.cpp  Vector.h  main.cpp
task6/: CMakeLists.txt  README.md  client.py  server.cpp
